--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,48 @@
 version: 2.1
 workflows:
   version: 2
-  just_push:
+  deploy:
       jobs:
       - pantheon/push
 
+
+      - playground2/npmbuild_and_persist:
+          package_lock_location: "frontity"
+          path_to_persist: "frontity/build"
+          build_command: "npm run build"
+          requires:
+            - pantheon/push
+          pre-steps:
+            # - attach_workspace:
+            #     at: /tmp/workspace
+            # - run: cd /tmp/workspace && ls -al && find .
+            # - run: cp /tmp/workspace/bash_env.txt $BASH_ENV
+            - playground/setbashenv
+            - run: cd frontity && sed -i -e "s/test-${TERMINUS_SITE}/${TERMINUS_ENV}-${TERMINUS_SITE}/g" frontity.settings.js
+            - run: cd frontity && cat frontity.settings.js
+      - deploy_cloud_function:
+          requires:
+            - playground2/npmbuild_and_persist
+
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0
+  playground2: fauxalgore/playground@0.0.2
+
+
+jobs:
+  deploy_cloud_function:
+    docker:
+      - image: google/cloud-sdk
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - playground/setbashenv
+      - run: ls -al
+      - run: cd frontity/build && ls -al
+      - run:
+          name: Login to gcloud
+          command: |
+            echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
