gotta do the deploy part

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,3 +46,8 @@ jobs:
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
             gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
             gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+      - run:
+          name: deploy
+          # @todo make a variable for serverlessplayground and runtime, and probably everything in gcloud functions deploy.
+          command: |
+            gcloud functions deploy ${TERMINUS_SITE}--${TERMINUS_ENV}  --project=serverlessplayground --runtime=nodejs10 --trigger-http  --allow-unauthenticated  --entry-point=default --source=frontity/build
