--- a/frontity/package.json
+++ b/frontity/package.json
@@ -8,7 +8,7 @@
   ],
   "scripts": {
     "dev": "frontity dev",
-    "build": "frontity build",
+    "build": "frontity build && cp build/server.js build/index.js",
     "serve": "frontity serve"
   },
   "prettier": {},
