ci(circle-ci): testing fresh basecode to pantheon from github

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,17 @@ workflows:
   deploy:
       jobs:
       - pantheon/push
-      - playground/npmbuild_and_persist:
-          package_lock_location: "frontity"
-          path_to_persist: "frontity/build"
-          build_command: "npm run build"
-          requires:
-            - pantheon/push
-          pre-steps:
-            - playground/setbashenv
-      - deploy_cloud_function:
-          requires:
-            - playground/npmbuild_and_persist
+      # - playground/npmbuild_and_persist:
+      #     package_lock_location: "frontity"
+      #     path_to_persist: "frontity/build"
+      #     build_command: "npm run build"
+      #     requires:
+      #       - pantheon/push
+      #     pre-steps:
+      #       - playground/setbashenv
+      # - deploy_cloud_function:
+      #     requires:
+      #       - playground/npmbuild_and_persist
 
 jobs:
   deploy_cloud_function:
@@ -41,4 +41,4 @@ jobs:
 
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0
-  playground: fauxalgore/playground@0.0.2
+  # playground: fauxalgore/playground@0.0.2
