ci(gcp): deploy funtcion gcp (#2)
* ci(gcp): deploy funtcion gcp

* ci(gcp): deploy funtcion gcp

* ci(gcp): adding core/

* ci(gcp): temporaly remove multidev

* ci(circle-ci): ignore puch pantheon

* ci(circle-ci): ignore push pantheon

* ci(circle-ci): restore push pantheon

* ci(circle-ci): project set env

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,17 +4,17 @@ workflows:
   deploy:
       jobs:
       - pantheon/push
-      # - playground/npmbuild_and_persist:
-      #     package_lock_location: "frontity"
-      #     path_to_persist: "frontity/build"
-      #     build_command: "npm run build"
-      #     requires:
-      #       - pantheon/push
-      #     pre-steps:
-      #       - playground/setbashenv
-      # - deploy_cloud_function:
-      #     requires:
-      #       - playground/npmbuild_and_persist
+      - playground/npmbuild_and_persist:
+          package_lock_location: "frontity"
+          path_to_persist: "frontity/build"
+          build_command: "npm run build"
+          requires:
+            - pantheon/push
+          pre-steps:
+            - playground/setbashenv
+      - deploy_cloud_function:
+          requires:
+            - playground/npmbuild_and_persist
 
 jobs:
   deploy_cloud_function:
@@ -37,8 +37,8 @@ jobs:
           name: deploy
           # @todo make a variable for serverlessplayground and runtime, and probably everything in gcloud functions deploy.
           command: |
-            gcloud functions deploy ${TERMINUS_SITE}--${TERMINUS_ENV} --project=serverlessplayground --runtime=nodejs10 --trigger-http  --allow-unauthenticated  --entry-point=default --source=frontity/build --set-env-vars="TERMINUS_SITE=${TERMINUS_SITE},TERMINUS_ENV=${TERMINUS_ENV}"
+            gcloud functions deploy ${TERMINUS_SITE}--${TERMINUS_ENV} --project=${GOOGLE_PROJECT_ID} --runtime=nodejs10 --trigger-http  --allow-unauthenticated  --entry-point=default --source=frontity/build --set-env-vars="TERMINUS_SITE=${TERMINUS_SITE},TERMINUS_ENV=${TERMINUS_ENV}"
 
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0
-  # playground: fauxalgore/playground@0.0.2
+  playground: fauxalgore/playground@0.0.2
