fix: remove static on function deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,15 +34,17 @@ jobs:
             gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
             gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
       - run:
-          name: deploy
-          # @todo make a variable for serverlessplayground and runtime, and probably everything in gcloud functions deploy.
-          command: |
-            gcloud functions deploy ${TERMINUS_SITE}--${TERMINUS_ENV} --project=${GOOGLE_PROJECT_ID} --runtime=nodejs10 --trigger-http  --allow-unauthenticated  --entry-point=default --source=frontity/build --set-env-vars="TERMINUS_SITE=${TERMINUS_SITE},TERMINUS_ENV=${TERMINUS_ENV}"
-      - run:
           name: deploy-static
           # @todo make a variable for serverlessplayground and runtime, and probably everything in gcloud functions deploy.
           command: |
             gsutil -m rsync -r -c -d frontity/build/static gs://${GCP_BUCKET}/${TERMINUS_ENV}/static
+      - run:
+          name: deploy
+          # @todo make a variable for serverlessplayground and runtime, and probably everything in gcloud functions deploy.
+          command: |
+            rm -rf frontity/build/static
+            gcloud functions deploy ${TERMINUS_SITE}--${TERMINUS_ENV} --project=${GOOGLE_PROJECT_ID} --runtime=nodejs10 --trigger-http  --allow-unauthenticated  --entry-point=default --source=frontity/build --set-env-vars="TERMINUS_SITE=${TERMINUS_SITE},TERMINUS_ENV=${TERMINUS_ENV}"
+
 
 orbs:
   pantheon: pantheon-systems/pantheon@0.2.0
